--- a/gb/20/8/20/n12344251.md
+++ b/gb/20/8/20/n12344251.md
@@ -1,16 +1,16 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/wqlwpo3278/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/wqlwpo3278/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/wqlwpo3278/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/wqlwpo3278/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/wqlwpo3278/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/wqlwpo3278/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/wqlwpo3278/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/wqlwpo3278/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/wqlwpo3278/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/wqlwpo3278/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/wqlwpo3278/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/wqlwpo3278/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/wqlwpo3278/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/wqlwpo3278/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/wqlwpo3278/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/wqlwpo3278/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/wqlwpo3278/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/wqlwpo3278/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/wqlwpo3278/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/wqlwpo3278/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/wqlwpo3278/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/wqlwpo3278/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/wqlwpo3278/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/wqlwpo3278/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/wqlwpo3278/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/wqlwpo3278/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/wqlwpo3278/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/wqlwpo3278/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/wqlwpo3278/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/wqlwpo3278/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/wqlwpo3278/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/wqlwpo3278/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/wqlwpo3278/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/wqlwpo3278/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/wqlwpo3278/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/wqlwpo3278/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/wqlwpo3278/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/wqlwpo3278/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/wqlwpo3278/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/wqlwpo3278/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/wqlwpo3278/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/wqlwpo3278/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/wqlwpo3278/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/wqlwpo3278/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/wqlwpo3278/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/wqlwpo3278/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/wqlwpo3278/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hxcaik307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>研究证实的六项学习技巧</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2020/08/Fotolia_248022739_Subscription_L-600x400.jpg" />
 <h6>不管您从事什么职业，培养有效的学习技巧都是至关重要的。（Fotolia）
 </h6>
 <hr>
-<p>【大纪元2020年08月20日讯】（大纪元记者李路明澳洲悉尼编译报导）在学术界里的<ahref="https://github.com/wqlwpo3278/djy/blob/master/gb/tag/%E5%AD%A6%E4%B9%A0.md#1">学习</a>生活并不容易，无论您是学生还是教育工作者，安排学习时间或做备课工作都并非易事。培养<ahref="https://github.com/wqlwpo3278/djy/blob/master/gb/tag/%E6%97%B6%E9%97%B4%E7%AE%A1%E7%90%86.md#1">时间管理</a>技能对学生或老师来讲非常重要。如何有效的利用时间会让您有不同的收获。那么有什么方法可以使您更有效的利用好时间呢？这里介绍几项经研究证实的<ahref="https://github.com/wqlwpo3278/djy/blob/master/gb/tag/%E5%AD%A6%E4%B9%A0%E6%8A%80%E5%B7%A7.md#1">学习技巧</a>。</p>
+<p>【大纪元2020年08月20日讯】（大纪元记者李路明澳洲悉尼编译报导）在学术界里的<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%AD%A6%E4%B9%A0.md#1">学习</a>生活并不容易，无论您是学生还是教育工作者，安排学习时间或做备课工作都并非易事。培养<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%97%B6%E9%97%B4%E7%AE%A1%E7%90%86.md#1">时间管理</a>技能对学生或老师来讲非常重要。如何有效的利用时间会让您有不同的收获。那么有什么方法可以使您更有效的利用好时间呢？这里介绍几项经研究证实的<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%AD%A6%E4%B9%A0%E6%8A%80%E5%B7%A7.md#1">学习技巧</a>。</p>
 <p>1、回忆检索练习</p>
 <p>回忆检索练习基于这样的思想，即记住以前的答案比每次重新搜索更有效。例如，看到单词并能够写出定义，而不是看到闪卡就将其翻过来看答案，这就是通过回忆检索，检查自己对这个知识点是不是真正的掌握了。</p>
 <p>2、思维导图</p>
-<p>对于视觉<ahref="https://github.com/wqlwpo3278/djy/blob/master/gb/tag/%E5%AD%A6%E4%B9%A0.md#1">学习</a>者而言，思维导图是一种很棒的<ahref="https://github.com/wqlwpo3278/djy/blob/master/gb/tag/%E5%AD%A6%E4%B9%A0%E6%8A%80%E5%B7%A7.md#1">学习技巧</a>。它通过在容易理解的图表中直观地排列每个概念，从而清楚地显示每个点与主要概念之间的关系。此外，思维导图还可以帮助您提高阅读理解力。</p>
+<p>对于视觉<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%AD%A6%E4%B9%A0.md#1">学习</a>者而言，思维导图是一种很棒的<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%AD%A6%E4%B9%A0%E6%8A%80%E5%B7%A7.md#1">学习技巧</a>。它通过在容易理解的图表中直观地排列每个概念，从而清楚地显示每个点与主要概念之间的关系。此外，思维导图还可以帮助您提高阅读理解力。</p>
 <p>3、学习前锻炼</p>
 <p>在学习之前进行锻炼有很多好处，包括提升能量水平和释放内啡肽。无论是步行20分钟还是在健身房进行举重锻炼，任何让您心跳加速的运动都可以帮助您在接下来的学习里集中精力。</p>
 <p>4、莱特纳系统（Leitner System）</p>
@@ -32,48 +32,47 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/wqlwpo3278/djy/blob/master/gb/15/3/26/n4396644.md#1">自主学习能力 社会核心的竞争力</a></li>
-<li><a href="https://github.com/wqlwpo3278/djy/blob/master/gb/16/7/13/n8095380.md#1">澳洲ATAR高分学生分享HSC考试成功秘诀</a></li>
-<li><a href="https://github.com/wqlwpo3278/djy/blob/master/gb/16/12/30/n8646217.md#1">十个技巧 有效提升记忆力</a></li>
-<li><a href="https://github.com/wqlwpo3278/djy/blob/master/gb/18/4/13/n10299340.md#1">天才儿童更需经历失败</a></li>
-<li><a href="https://github.com/wqlwpo3278/djy/blob/master/gb/18/8/6/n10618136.md#1">在线课程：九个学习技巧</a></li>
-<li><a href="https://github.com/wqlwpo3278/djy/blob/master/gb/19/5/23/n11274794.md#1">学习努力成绩差 试试提取练习法</a></li>
-<li><a href="https://github.com/wqlwpo3278/djy/blob/master/gb/20/5/4/n12081099.md#1">在家学习指南：大学生如何充分利用线上课堂</a></li>
-<li><a href="https://github.com/wqlwpo3278/djy/blob/master/gb/20/8/14/n12330812.md#1">五个技巧为学习加速</a></li>
-<li><a href="https://github.com/wqlwpo3278/djy/blob/master/gb/20/8/19/n12342811.md#1">毕业生就业和起薪排名 堪培拉大学三连冠</a></li>
-<li><a href="https://github.com/wqlwpo3278/djy/blob/master/gb/20/8/19/n12341944.md#1">州政府出资 新州幼儿园将免费至四学期结束</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/3/26/n4396644.md#1">自主学习能力 社会核心的竞争力</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/7/13/n8095380.md#1">澳洲ATAR高分学生分享HSC考试成功秘诀</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/12/30/n8646217.md#1">十个技巧 有效提升记忆力</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/4/13/n10299340.md#1">天才儿童更需经历失败</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/8/6/n10618136.md#1">在线课程：九个学习技巧</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/5/23/n11274794.md#1">学习努力成绩差 试试提取练习法</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/5/4/n12081099.md#1">在家学习指南：大学生如何充分利用线上课堂</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/8/14/n12330812.md#1">五个技巧为学习加速</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13609689.md#1">昆州增加幼托行业拨款 4万儿童受益</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/25/n13604124.md#1">可在家进行的儿童趣味学习活动</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/9/13/n10712571.md#1" target="_blank">林辉：中共地雷战幕后清华师生的惨死</a></li><li><a href="https://github.com/wqlwpo3278/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank">证人描述活摘恐怖</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/15/9/12/n4526041.md#1" target="_blank">子华：谁是真正破坏社会安定的人</a></li>
+<li><a href="https://github.com/upjkzu3674/www/blob/master/README.md?dfh#1" target="_blank">下载免费翻墙软件</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/8/17/n10645382.md#1" target="_blank">严家伟：杀人越货丧尽天良的“土改”</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/6/22/n11340432.md#1" target="_blank">美国务院年度报告 批中共严重打压宗教自由</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/byeujs321/djy/blob/master/gb/20/8/6/n12311908.md#1">僧人神游极乐世界 带回醒世奇闻</a></li>
-<li><a href="https://github.com/byeujs321/djy/blob/master/gb/20/6/7/n12168858.md#1">“势败休云贵  家亡莫论亲”  板儿递给巧姐的那个佛手</a></li>
-<li><a href="https://github.com/byeujs321/djy/blob/master/gb/20/8/8/n12316046.md#1">中国古代独步天下的天文科技成就</a></li>
-<li><a href="https://github.com/byeujs321/djy/blob/master/gb/20/8/16/n12335448.md#1">神秘的中国绝代王后（上）</a></li>
-<li><a href="https://github.com/byeujs321/djy/blob/master/gb/20/8/14/n12329430.md#1">疗愈人心的天堂歌声——创作歌手凯蒂?曼蒂克</a></li>
-<li><a href="https://github.com/byeujs321/djy/blob/master/gb/20/8/19/n12342655.md#1">【纪元播报】中共北戴河会议难达共识 争论不休</a></li>
-<li><a href="https://github.com/byeujs321/djy/blob/master/gb/20/8/18/n12340737.md#1">【时事纵横】习吁节粮背后 川普：早不与习通话</a></li>
-<li><a href="https://github.com/byeujs321/djy/blob/master/gb/20/8/19/n12341322.md#1">【十字路口】中共七大黑帮特色 高官坠亡藏内幕</a></li>
-<li><a href="https://github.com/byeujs321/djy/blob/master/gb/20/8/17/n12336258.md#1">【翻墙必看】中共北戴河会议的异音曝光</a></li>
-<li><a href="https://github.com/byeujs321/djy/blob/master/gb/20/8/17/n12336450.md#1">瑞士驻华大使馆发微博 网民留言“大翻车”</a></li>
-<li><a href="https://github.com/byeujs321/djy/blob/master/gb/20/8/17/n12337826.md#1">好市多“Tiffany”钻戒之争 蒂芙尼败诉</a></li>
-<li><a href="https://github.com/byeujs321/djy/blob/master/gb/20/8/18/n12340885.md#1">成龙曾自曝做假慈善 不惭言论惊呆网友</a></li>
-<li><a href="https://github.com/byeujs321/djy/blob/master/gb/20/8/16/n12335475.md#1">李若彤首度公布真实年龄 冻龄外表震惊粉丝</a></li>
-<li><a href="https://github.com/byeujs321/djy/blob/master/gb/20/8/17/n12338375.md#1">孙俪爆料邓超糗事 做了一天笔记最终空无一字</a></li>
-<li><a href="https://github.com/byeujs321/djy/blob/master/gb/20/8/17/n12338032.md#1">港星住不惯大陆隔离酒店 一句话惹小粉红围剿</a></li>
-<li><a href="https://github.com/byeujs321/djy/blob/master/gb/20/8/16/n12335889.md#1">分享十岁女儿扎染技能 吴尊全家穿亲子装逛街</a></li>
-<li><a href="https://github.com/byeujs321/djy/blob/master/gb/20/8/16/n12335214.md#1">为护小主人 美国牧羊犬与歹徒搏斗身中三枪</a></li>
-<li><a href="https://github.com/byeujs321/djy/blob/master/gb/20/8/17/n12336793.md#1">奇迹！挪威公司新技术 沙漠变良田仅需7小时</a></li>
-<li><a href="https://github.com/byeujs321/djy/blob/master/gb/20/8/17/n12338146.md#1">走路也能护膝盖 医师：对膝盖有益的健走方法</a></li>
-<li><a href="https://github.com/byeujs321/djy/blob/master/gb/20/8/17/n12336694.md#1">英国一群绵羊似被“点穴” 静止几个小时</a></li>
-<li><a href="https://github.com/byeujs321/djy/blob/master/gb/20/8/18/n12339362.md#1">大陆老翁遛狗 被从天而降的小猫砸昏</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/25/n13605590.md#1">【未解之谜】地球磁极倒转进行中??</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610168.md#1">【神韵作品】唐瑞讲故事｜朗读｜小熊维尼第一章</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/22/n13597113.md#1">【百年真相】现代文字狱 胡风如何成了反革命？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/17/n13582752.md#1">【奇事】两位卜算大师看出对方死期 但两人皆无法避过</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614863.md#1">《梁祝》小提琴协奏曲</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13616642.md#1">【新闻大家谈】“取胜三关键”俄乌各占几成？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13613897.md#1">【十字路口】锁链女遭拐卖凌虐 幕后大黑手曝光？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607661.md#1">【更新2.27】乌总统：接下来24小时至关重要</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610320.md#1">乌克兰用无人机摧毁俄导弹系统 视频曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609576.md#1">俄银行被切断SWIFT系统 中共角色更尴尬</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609572.md#1">纳豆或暂退萤光幕一年 经纪人曝他最新病况</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609465.md#1">看海狮资料一目十行过目不忘 杨幂展超强记忆力</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614888.md#1">赴韩拍戏皮肤长满红斑 范冰冰素颜照吓坏网友</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612216.md#1">港星吴孟达过世一周年 长眠大马原因曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614510.md#1">香港TVB艺人祝文君罹癌离世 终年55岁</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612112.md#1">更强Omicron变种出现？致病性、传播力一次看</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/23/n13599631.md#1">疫苗、口罩难结束疫情 这一件事或成关键</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607140.md#1">睡眠十大好处 提高脑力、抗衰老都在内</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13608014.md#1">多吃橙色食物 不只护眼 还有这些强大好处</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13607982.md#1">迷走神经：最长脑神经 刺激它能让你更健康</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/wqlwpo3278/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/wqlwpo3278/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/8/20/n12344251.htm">研究证实的六项学习技巧</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/8/20/n12344251.htm">研究证实的六项学习技巧</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://www.szzd.org/v.php?action=qrcode&url=https://github.com/wqlwpo3278/djy/blob/master/gb/20/8/20/n12344251.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/wqlwpo3278/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wqlwpo3278/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/wqlwpo3278/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/wqlwpo3278/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/wqlwpo3278/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wqlwpo3278/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/wqlwpo3278/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wqlwpo3278/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/wqlwpo3278/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wqlwpo3278/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/wqlwpo3278/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wqlwpo3278/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/wqlwpo3278/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wqlwpo3278/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/wqlwpo3278/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wqlwpo3278/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/wqlwpo3278/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wqlwpo3278/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/wqlwpo3278/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wqlwpo3278/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/wqlwpo3278/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wqlwpo3278/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/wqlwpo3278/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wqlwpo3278/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/wqlwpo3278/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wqlwpo3278/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/wqlwpo3278/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wqlwpo3278/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/wqlwpo3278/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wqlwpo3278/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/wqlwpo3278/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wqlwpo3278/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/wqlwpo3278/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wqlwpo3278/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/wqlwpo3278/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wqlwpo3278/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/wqlwpo3278/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wqlwpo3278/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/wqlwpo3278/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wqlwpo3278/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/wqlwpo3278/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wqlwpo3278/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/wqlwpo3278/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wqlwpo3278/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/wqlwpo3278/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wqlwpo3278/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/wqlwpo3278/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wqlwpo3278/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hxcaik307/djy/blob/master/gb/20/8/20/n12344251.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
